<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="T_COE_PTP_DIAGNOSTICS" Id="{9bf0012e-1c9e-4387-95ff-2b421c2dbb4b}">
    <Declaration><![CDATA[TYPE T_COE_PTP_DIAGNOSTICS :
STRUCT
	ptp_state: E_COE_PTP_STATE := E_COE_PTP_STATE.UNKNOWN;
	leap_second: INT := 0;
	offset_from_master: DINT := 0;       // offset from master in ns
	offset_from_master_msec: LREAL := 0;  // offset from master in ms
	offset_from_master_sec: LREAL := 0;   // offset from master in sec
	mean_path_delay: UDINT := 0;
	clock_identity: ARRAY[0..7] OF BYTE;
	grandmaster_identity: ARRAY[0..7] OF BYTE;
	parent_port_identity: ARRAY[0..9] OF BYTE;
	sync_msg_count:        DINT := 0;
	steps_removed:         UINT := 0;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>